# kit

./: .gitignore  CHANGELOG.md  EXTENSION_INSTALL_GUIDE.md  EXTENSION_RELEASE_GUIDE.md  EXTENSION_TODO.md  LICENSE  PERF.md  Perf.md  README.md  README_EN.md  RELEASE_AUTOMATION_SUMMARY.md  TODO.md  build-report.json  electron-builder.yml  index.html  intro.md  manifest.json  nitro.config.ts  package-lock.json  package.json  pnpm-lock.yaml  popup.html  todo.md  tools-analysis.json  tsconfig.json  vite.config.ts  vite.extension.config.ts  vitest.config.ts  wrangler.jsonc  wrangler.toml
.cursor/rules/: clean-code.mdc  codequality.mdc  components-directory.mdc  project-structure.mdc  react.mdc  tauri.mdc  typescript-style.mdc
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release-crx.yml  release.yml  test.yml
docs/: BUILD_OPTIMIZATION.md  CHANGELOG_GUIDE.md  ELECTRON_SETUP.md  MACOS_CODE_SIGNING.md  NEXT_STEPS_IMPROVEMENTS.md  OPTIMIZATION_RECOMMENDATIONS.md  P0-P1_IMPROVEMENTS.md  PROJECT_STRUCTURE.md
electron/: main.ts  preload.ts  schemas.ts  tsconfig.json  tsconfig.preload.json
public/workers/: audio-processing-worker.js  image-compression-worker.js  matrix-processing-worker.js  processing-worker.js  video-processing-worker.js
scripts/: analyze-tools-for-testing.mjs  build-extension.mjs  build-optimizer.mjs  build.sh  changelog-generator.mjs  check-tools.mjs  deps-replacer.mjs  ensure-preload-cjs.mjs  fix-mac-gatekeeper.sh  generate-test-template.mjs  pack-crx.mjs  prepare-icons.mjs  prepare-win-icon.mjs  test-changelog.mjs  update-version.mjs  updater.mjs
src/: App.css  i18n.ts  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: integration.test.ts
src/components/: adsense-ad.tsx  app-sidebar.tsx  cache-strategy-manager.tsx  category-manager.tsx  dependency-analyzer.tsx  error-boundary.tsx  nav-documents.tsx  nav-main.tsx  performance-monitor.tsx  resource-optimization.tsx  search-bar.tsx  settings-dialog.tsx  site-header.tsx  smart-tool-grid.tsx  theme-toggle.tsx  tool-card.tsx  virtual-tool-grid.tsx
src/extension/: background.ts  content.ts  popup.tsx  storage.ts
src/hooks/: use-cache.ts  use-clipboard-manager.ts  use-clipboard.ts  use-drag-drop.ts  use-export-manager.ts  use-favorites.ts  use-file-processor.ts  use-history.ts  use-input-handler.ts  use-keyboard-shortcuts.ts  use-mobile.ts  use-persistent-cache.ts  use-real-time-validator.ts  use-resource-optimizer.ts  use-settings-manager.ts  use-stats.ts  use-template-manager.ts  use-tool-state.ts
src/lib/: cache-strategy.ts  cache.ts  code-splitting.ts  custom-categories.ts  data.ts  error-handler.ts  favorites.ts  file-memory-optimizer.ts  file-utils.ts  indexeddb.ts  logger.ts  perf.ts  persistence.ts  preloader.ts  resource-optimizer.ts  route-prefetch.ts  theme.ts  tools-map.ts  utils.ts  worker-manager.ts
src/locales/: index.ts
src/routes/: __root.tsx  index.tsx  settings.tsx  test-ad.tsx  tool.$tool.tsx
(+567 files in other folders)
